WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
300770
[Liquid Glass] Scroll pocket can get stuck with previous color if its style is changed from hard to soft
https://bugs.webkit.org/show_bug.cgi?id=300770
Summary
[Liquid Glass] Scroll pocket can get stuck with previous color if its style i...
Wenson Hsieh
Reported
2025-10-14 20:40:35 PDT
rdar://162558490
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2025-10-14 20:51:31 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/52365
EWS
Comment 2
2025-10-15 07:14:36 PDT
Committed
301556@main
(5823931432ec): <
https://commits.webkit.org/301556@main
> Reviewed commits have been landed. Closing PR #52365 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug